# linux-do-keyword-monitor

./: .gitignore  1.md  README.md  pyproject.toml  test.py
src/linuxdo_monitor/: app.py  cache.py  cli.py  config.py  database.py  migrations.py  models.py  web.py  web_flask.py
src/linuxdo_monitor/bot/: bot.py  handlers.py
src/linuxdo_monitor/matcher/: keyword.py
src/linuxdo_monitor/rss/: fetcher.py  parser.py
src/linuxdo_monitor/source/: __init__.py  base.py  discourse.py  rss.py
src/linuxdo_monitor/templates/: add_forum.html  base.html  index.html
src/linuxdo_monitor/templates/linuxdo/: config.html  sql.html  users.html
